lesson12/dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kurlyk-dp
  labels: 
    app: kurlyk-dp
spec:
  replicas: 4
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
      - name: kurlyk-app-container
        image: sakurlyk/otus:app_lesson10
        ports:
        - containerPort: 8000
