lesson12/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kurlyk-ingress
spec:
  ingressClassName: nginx  
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: kurlyk-svc
            port:
              number: 80
